config/dev/downstream_resources/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: datum-downstream-gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: datum-downstream-gateway-hostnames
