config/dev/downstream_resources/downstream-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: datum-downstream-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: datum-downstream-gateway
    namespace: datum-downstream-gateway
---
# If not Gateway is associated with a GatewayClass, the Envoy Gateway controller
# will not provision the gateway infrastructure. This may become the canary /
# monitoring endpoint in the future.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: anchor-gateway
  namespace: datum-downstream-gateway
spec:
  gatewayClassName: datum-downstream-gateway
  listeners:
  - protocol: HTTP
    port: 80
    name: default-http
    hostname: canary.prism.e2e.env.datum.net
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: default-https
    hostname: canary.prism.e2e.env.datum.net
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: anchor-gateway-default-https
      mode: Terminate
